--- a/iidaPro-2015/Main.storyboard
+++ b/iidaPro-2015/Main.storyboard
@@ -208,7 +208,7 @@
                                     <constraint firstAttribute="height" constant="60" id="cVx-vD-YNh"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="90" id="dNF-Az-ODw"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
                             </textView>
@@ -233,30 +233,58 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="000-000-0000" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Vao-X6-RSh">
-                                <rect key="frame" x="0.0" y="224" width="600" height="90"/>
+                                <rect key="frame" x="0.0" y="215" width="600" height="60"/>
                                 <animations/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="90" id="WwL-wA-qy6"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="90" id="WwL-wA-qy6"/>
+                                    <constraint firstAttribute="height" constant="60" id="wfT-u7-UOb"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="川崎市事業所" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1u-25-JpS">
+                                <rect key="frame" x="0.0" y="300" width="600" height="45"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="7Wc-jz-Yzf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="000-000-0000" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="BFV-xI-ILg">
+                                <rect key="frame" x="0.0" y="355" width="600" height="60"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="1i8-KD-UpE"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES"/>
                             </textView>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="2sw-tj-MFh" firstAttribute="top" secondItem="1N6-tM-hb1" secondAttribute="bottom" constant="55" id="04j-Zz-lMp"/>
+                            <constraint firstItem="BFV-xI-ILg" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="1oj-eb-xWr"/>
+                            <constraint firstItem="BFV-xI-ILg" firstAttribute="top" secondItem="A1u-25-JpS" secondAttribute="bottom" constant="10" id="29F-yB-MuQ"/>
                             <constraint firstAttribute="trailing" secondItem="2sw-tj-MFh" secondAttribute="trailing" id="74V-pb-Yaf"/>
                             <constraint firstItem="pZi-uQ-4Ws" firstAttribute="top" secondItem="1N6-tM-hb1" secondAttribute="bottom" id="A7h-Kw-LkY"/>
                             <constraint firstAttribute="trailing" secondItem="pZi-uQ-4Ws" secondAttribute="trailing" id="C4g-GP-Zce"/>
+                            <constraint firstItem="A1u-25-JpS" firstAttribute="top" secondItem="Vao-X6-RSh" secondAttribute="bottom" constant="25" id="DGz-JT-KGG"/>
                             <constraint firstItem="9Ks-5p-bkO" firstAttribute="centerX" secondItem="jIo-0M-QBm" secondAttribute="centerX" id="OcA-eN-fAQ"/>
-                            <constraint firstItem="Vao-X6-RSh" firstAttribute="top" secondItem="9Ks-5p-bkO" secondAttribute="bottom" constant="19" id="TD7-pl-YJN"/>
+                            <constraint firstAttribute="trailing" secondItem="BFV-xI-ILg" secondAttribute="trailing" id="Rsg-XH-FR2"/>
+                            <constraint firstItem="Vao-X6-RSh" firstAttribute="top" secondItem="9Ks-5p-bkO" secondAttribute="bottom" constant="10" id="TD7-pl-YJN"/>
                             <constraint firstAttribute="trailing" secondItem="9Ks-5p-bkO" secondAttribute="trailing" id="a81-Vc-eMw"/>
+                            <constraint firstItem="A1u-25-JpS" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="dqQ-VG-DqX"/>
                             <constraint firstItem="2sw-tj-MFh" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="ero-OO-xP5"/>
                             <constraint firstItem="pZi-uQ-4Ws" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="mFd-Fz-1Zw"/>
                             <constraint firstAttribute="trailing" secondItem="Vao-X6-RSh" secondAttribute="trailing" id="rMe-H8-1CW"/>
+                            <constraint firstAttribute="trailing" secondItem="A1u-25-JpS" secondAttribute="trailing" id="sC0-dp-eAd"/>
                             <constraint firstItem="9Ks-5p-bkO" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="sif-JZ-1Ef"/>
                             <constraint firstItem="Vao-X6-RSh" firstAttribute="leading" secondItem="jIo-0M-QBm" secondAttribute="leading" id="sr6-gg-Ahb"/>
                             <constraint firstItem="9Ks-5p-bkO" firstAttribute="top" secondItem="2sw-tj-MFh" secondAttribute="bottom" constant="25" id="vOD-3z-p5c"/>
@@ -268,6 +296,8 @@
                         <outlet property="firstTextView" destination="2sw-tj-MFh" id="n42-eY-J2E"/>
                         <outlet property="secondLabel" destination="9Ks-5p-bkO" id="MWE-ep-n8K"/>
                         <outlet property="secondTextView" destination="Vao-X6-RSh" id="ql3-HR-X07"/>
+                        <outlet property="therdLabel" destination="A1u-25-JpS" id="EsD-AN-MGZ"/>
+                        <outlet property="therdTextView" destination="BFV-xI-ILg" id="vyp-Sy-WhI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="02X-BL-0we" userLabel="First Responder" sceneMemberID="firstResponder"/>
